Thêm quản lý Sân & Thống kê báo biểu, Fix lỗi service